java 21 upgrade is done